--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
-GlobalDefaultGameMode=/Game/ActorModels/TankModel/TanksGameModeBasic.TanksGameModeBasic_C
+EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/BluePrints/TanksGameModeBasic.TanksGameModeBasic_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -50,5 +50,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
